@@ -1,37 +1,19 @@
 package detubarrio.rest.service;
 
-import detubarrio.rest.dto.ComercioDetailResponse;
-import detubarrio.rest.dto.ComercioRequest;
-import detubarrio.rest.dto.ComercioSummaryResponse;
-import detubarrio.rest.dto.ProductoComercioRequest;
-import detubarrio.rest.dto.ProductoComercioResponse;
-import detubarrio.rest.dto.ResenaResponse;
-import detubarrio.rest.model.Categoria;
-import detubarrio.rest.model.Comercio;
-import detubarrio.rest.model.ComercioProducto;
-import detubarrio.rest.model.EstadoComercio;
-import detubarrio.rest.model.Producto;
-import detubarrio.rest.repository.CategoriaRepository;
-import detubarrio.rest.repository.ComercioProductoRepository;
-import detubarrio.rest.repository.ComercioRepository;
-import detubarrio.rest.repository.ProductoRepository;   
-import detubarrio.rest.repository.ResenaRepository;
-
-// CORRECCIÓN DE IMPORTS:
-import java.io.IOException; // Usar el de Java estándar, no el de JWT
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-
+import detubarrio.rest.dto.*;
+import detubarrio.rest.model.*;
+import detubarrio.rest.repository.*;
 import jakarta.persistence.EntityNotFoundException;
-// Eliminados: Path de criterios y Paths de Swagger que daban conflicto
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.UUID;
 import java.util.List;
 import java.util.Optional;
@@ -40,22 +22,14 @@ import java.util.stream.Collectors;
 @Service
 public class ComercioService {
 
-    private final String UPLOAD_DIR = "uploads/";   
+    private final String UPLOAD_DIR = "uploads/";
 
-    @Autowired
-    private ComercioRepository comercioRepository;
-
-    @Autowired
-    private ResenaRepository resenaRepository;
-
-    @Autowired
-    private ComercioProductoRepository comercioProductoRepository;
-
-    @Autowired
-    private ProductoRepository productoRepository;
-
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+    @Autowired private ComercioRepository comercioRepository;
+    @Autowired private ResenaRepository resenaRepository;
+    @Autowired private ComercioProductoRepository comercioProductoRepository;
+    @Autowired private ProductoRepository productoRepository;
+    @Autowired private CategoriaRepository categoriaRepository;
+    
 
     @Transactional(readOnly = true)
     public List<ComercioSummaryResponse> listarComercios(Optional<Long> categoriaId) {
@@ -63,237 +37,136 @@ public class ComercioService {
                 .map(id -> comercioRepository.findByCategoriaIdAndEstado(id, EstadoComercio.APROBADO))
                 .orElseGet(() -> comercioRepository.findByEstado(EstadoComercio.APROBADO));
 
-        comercios = comercios.stream()
-                .filter(comercio -> comercio.getEstado() == EstadoComercio.APROBADO && comercio.isGestionAutorizada())
-                .toList();
-
         return comercios.stream()
+                .filter(c -> c.isGestionAutorizada())
                 .map(this::toSummaryResponse)
                 .collect(Collectors.toList());
     }
 
-    @Transactional // <- No olvides añadir esto arriba del método
-    public ComercioDetailResponse actualizarConFotos(Long id, String nombre, String descripcion, 
-                                                        String horario, String diasApertura, 
-                                                        MultipartFile logo, MultipartFile banner) {
-        
-        Comercio comercio = comercioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Comercio no encontrado"));
-
-        comercio.setNombreComercio(nombre);
-        comercio.setDescripcion(descripcion);
-        comercio.setHorario(horario);
-        comercio.setDiasApertura(diasApertura);
-
-        try {
-                if (logo != null && !logo.isEmpty()) {
-                String nombreLogo = guardarArchivo(logo);
-                comercio.setLogo("/uploads/" + nombreLogo);
-                }
-                if (banner != null && !banner.isEmpty()) {
-                String nombreBanner = guardarArchivo(banner);
-                comercio.setBanner("/uploads/" + nombreBanner);
-                }
-        } catch (IOException e) {
-                throw new RuntimeException("Error al guardar las imágenes", e);
-        }
-
-        comercio = comercioRepository.save(comercio);
-        
-        return toDetailResponse(comercio); 
-    }
-
-    private String guardarArchivo(MultipartFile archivo) throws IOException {
-        Path root = Paths.get(UPLOAD_DIR);
-
-        if (!Files.exists(root)) {
-            Files.createDirectories(root);
-        }
-
-        String nombreOriginal = archivo.getOriginalFilename();
-        String extension = "";
-        if (nombreOriginal != null && nombreOriginal.contains(".")) {
-            extension = nombreOriginal.substring(nombreOriginal.lastIndexOf("."));
-        }
-        
-        String nombreUnico = UUID.randomUUID().toString() + extension;
-        Path destino = root.resolve(nombreUnico);
-
-        Files.copy(archivo.getInputStream(), destino, StandardCopyOption.REPLACE_EXISTING);
-
-        return nombreUnico;
-    }
-
     @Transactional(readOnly = true)
-    public ComercioDetailResponse obtenerComercio(Long comercioId) {
-        Comercio comercio = comercioRepository.findById(comercioId)
-                .orElseThrow(() -> new RuntimeException("Comercio no encontrado"));
-
-        if (comercio.getEstado() != EstadoComercio.APROBADO || !comercio.isGestionAutorizada()) {
-            throw new RuntimeException("Comercio no disponible");
-        }
-
+    public ComercioDetailResponse obtenerComercio(Long id) {
+        Comercio comercio = comercioRepository.findByIdWithDisponibilidades(id)
+                .orElseThrow(() -> new EntityNotFoundException("Comercio no encontrado"));
         return toDetailResponse(comercio);
-    }
-
-    public ComercioSummaryResponse crearComercio(ComercioRequest request) {
-        Categoria categoria = categoriaRepository.findById(request.categoriaId())
-                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
-                
-        Comercio comercio = Comercio.builder()
-                .nombreComercio(request.nombreComercio())
-                .descripcion(request.descripcion())
-                .horario(request.horario())
-                .diasApertura(request.diasApertura())
-                .logo(request.logo())
-                .banner(request.banner())
-                .categoria(categoria)
-                .estado(EstadoComercio.PENDIENTE) // Importante: por defecto al crear
-                .gestionAutorizada(true)
-                .build();
-                
-        comercio = comercioRepository.save(comercio);
-        return toSummaryResponse(comercio);
-    }
-
-    @Transactional
-    public ComercioDetailResponse actualizarComercio(Long comercioId, ComercioRequest request) {
-        Comercio comercio = comercioRepository.findById(comercioId)
-            .orElseThrow(() -> new EntityNotFoundException("No existe el comercio con id " + comercioId));
-
-        // CORRECCIÓN: Usar métodos del Record (sin "get")
-        comercio.setNombreComercio(request.nombreComercio());
-        comercio.setDescripcion(request.descripcion());
-        comercio.setHorario(request.horario());
-        comercio.setDiasApertura(request.diasApertura());
-        comercio.setLogo(request.logo());
-        comercio.setBanner(request.banner());
-
-        if (request.categoriaId() != null) {
-            Categoria categoria = categoriaRepository.findById(request.categoriaId())
-                .orElseThrow(() -> new EntityNotFoundException("Categoría no encontrada"));
-            comercio.setCategoria(categoria);
-        }
-
-        comercio = comercioRepository.save(comercio);
-        return toDetailResponse(comercio); // Usamos tu conversor completo
     }
 
     @Transactional(readOnly = true)
     public ComercioDetailResponse obtenerComercioPorUsuario(Long usuarioId) {
         Comercio comercio = comercioRepository.findByUsuarioCreadorId(usuarioId)
-            .orElseThrow(() -> new EntityNotFoundException("Este usuario no tiene un comercio asignado"));
-        
-        return toDetailResponse(comercio); // Usamos tu conversor completo
+                .orElseThrow(() -> new EntityNotFoundException("Comercio no encontrado para este usuario"));
+        return toDetailResponse(comercio);
+    }
+
+    @Transactional
+    public ComercioSummaryResponse crearComercio(ComercioRequest request) {
+        Categoria cat = categoriaRepository.findById(request.categoriaId())
+                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
+        Comercio comercio = Comercio.builder()
+                .nombreComercio(request.nombreComercio())
+                .descripcion(request.descripcion())
+                .categoria(cat)
+                .estado(EstadoComercio.PENDIENTE)
+                .gestionAutorizada(true)
+                .build();
+        return toSummaryResponse(comercioRepository.save(comercio));
+    }
+
+    @Transactional
+    public ComercioDetailResponse actualizarConFotos(Long id, String nombre, String descripcion, String horario, String diasApertura, MultipartFile logo, MultipartFile banner) {
+        Comercio comercio = comercioRepository.findById(id).orElseThrow(() -> new RuntimeException("No encontrado"));
+        comercio.setNombreComercio(nombre);
+        comercio.setDescripcion(descripcion);
+        comercio.setHorario(horario);
+        comercio.setDiasApertura(diasApertura);
+        try {
+            if (logo != null && !logo.isEmpty()) comercio.setLogo("/uploads/" + guardarArchivo(logo));
+            if (banner != null && !banner.isEmpty()) comercio.setBanner("/uploads/" + guardarArchivo(banner));
+        } catch (IOException e) { throw new RuntimeException(e); }
+        return toDetailResponse(comercioRepository.save(comercio));
     }
 
     @Transactional(readOnly = true)
     public List<ProductoComercioResponse> obtenerProductosComercio(Long comercioId) {
-        Comercio comercio = comercioRepository.findById(comercioId)
-                .orElseThrow(() -> new RuntimeException("Comercio no encontrado"));
-                
+        Comercio comercio = comercioRepository.findById(comercioId).orElseThrow(() -> new RuntimeException("No encontrado"));
         return comercio.getComercioProductos().stream()
                 .map(cp -> new ProductoComercioResponse(
-                        cp.getProducto().getId(),
-                        cp.getProducto().getNombreProducto(),
-                        cp.getProducto().getDescripcion(),
-                        cp.getPrecio(),
-                        cp.getStock(),
-                        cp.getProducto().getImagen()
-                ))
-                .collect(Collectors.toList());
+                    cp.getProducto().getId(), 
+                    cp.getProducto().getNombreProducto(), 
+                    cp.getProducto().getDescripcion(), 
+                    cp.getPrecio(), 
+                    cp.getProducto().getImagen()))
+                .toList();
     }
 
     @Transactional
     public ProductoComercioResponse agregarProductoAComercio(Long comercioId, ProductoComercioRequest request) {
-        Comercio comercio = comercioRepository.findById(comercioId)
-                .orElseThrow(() -> new RuntimeException("Comercio no encontrado"));
-                
-        Producto producto = Producto.builder()
+        Comercio comercio = comercioRepository.findById(comercioId).orElseThrow(() -> new RuntimeException("No encontrado"));
+        Producto p = productoRepository.save(Producto.builder()
                 .nombreProducto(request.nombreProducto())
                 .descripcion(request.descripcion())
                 .imagen(request.imagen())
-                .build();
-        producto = productoRepository.save(producto);
-        
-        ComercioProducto cp = ComercioProducto.builder()
+                .build());
+        ComercioProducto cp = comercioProductoRepository.save(ComercioProducto.builder()
                 .comercio(comercio)
-                .producto(producto)
+                .producto(p)
                 .precio(request.precio())
                 .stock(request.stock())
-                .build();
-        cp = comercioProductoRepository.save(cp);
+                .build());
+        return new ProductoComercioResponse(p.getId(), p.getNombreProducto(), p.getDescripcion(), cp.getPrecio(), p.getImagen());
+    }
+
+    private String guardarArchivo(MultipartFile archivo) throws IOException {
+        Path root = Paths.get(UPLOAD_DIR);
+        if (!Files.exists(root)) Files.createDirectories(root);
+        String nombreUnico = UUID.randomUUID().toString() + (archivo.getOriginalFilename().contains(".") ? archivo.getOriginalFilename().substring(archivo.getOriginalFilename().lastIndexOf(".")) : "");
+        Files.copy(archivo.getInputStream(), root.resolve(nombreUnico), StandardCopyOption.REPLACE_EXISTING);
+        return nombreUnico;
+    }
+
+    private ComercioSummaryResponse toSummaryResponse(Comercio c) {
+        return new ComercioSummaryResponse(c.getId(), c.getNombreComercio(), c.getDescripcion(), c.getHorario(), c.getDiasApertura(), c.getLogo(), c.getCategoria() != null ? c.getCategoria().getNombreCategoria() : "Sin categoría", 0.0, 0L);
+    }
+
+    private ComercioDetailResponse toDetailResponse(Comercio c) {
+        // 1. Mapear Disponibilidades
+        List<DisponibilidadResponse> disps = (c.getDisponibilidades() != null) ?
+            c.getDisponibilidades().stream()
+                .map(d -> new DisponibilidadResponse(d.getId(), d.getFecha(), d.getHoraInicio(), d.getHoraFin(), d.isReservado()))
+                .toList() : List.of();
         
-        return new ProductoComercioResponse(
-                cp.getProducto().getId(),
-                cp.getProducto().getNombreProducto(),
-                cp.getProducto().getDescripcion(),
-                cp.getPrecio(),
-                cp.getStock(),
-                cp.getProducto().getImagen()
-        );
-    }
-
-    private ComercioSummaryResponse toSummaryResponse(Comercio comercio) {
-        Double puntuacionMedia = resenaRepository.findAverageValoracionByComercioId(comercio.getId());
-        Long totalResenas = resenaRepository.countByComercioId(comercio.getId());
-
-        return new ComercioSummaryResponse(
-                comercio.getId(),
-                comercio.getNombreComercio(),
-                comercio.getDescripcion(),
-                comercio.getHorario(),
-                comercio.getDiasApertura(),
-                comercio.getLogo(),
-                comercio.getCategoria() != null ? comercio.getCategoria().getNombreCategoria() : "Sin categoría",
-                puntuacionMedia != null ? puntuacionMedia : 0.0,
-                totalResenas != null ? totalResenas : 0L
-        );
-    }
-
-    private ComercioDetailResponse toDetailResponse(Comercio comercio) {
-        Double puntuacionMedia = resenaRepository.findAverageValoracionByComercioId(comercio.getId());
-        Long totalResenas = resenaRepository.countByComercioId(comercio.getId());
-
-        List<ProductoComercioResponse> productos = (comercio.getComercioProductos() != null) ? 
-            comercio.getComercioProductos().stream()
+        // 2. Mapear Productos
+        List<ProductoComercioResponse> productos = (c.getComercioProductos() != null) ?
+            c.getComercioProductos().stream()
                 .map(cp -> new ProductoComercioResponse(
-                        cp.getProducto().getId(),
-                        cp.getProducto().getNombreProducto(),
-                        cp.getProducto().getDescripcion(),
-                        cp.getPrecio(),
-                        cp.getStock(),
-                        cp.getProducto().getImagen()
-                ))
-                .collect(Collectors.toList()) : List.of();
+                    cp.getProducto().getId(), 
+                    cp.getProducto().getNombreProducto(), 
+                    cp.getProducto().getDescripcion(), 
+                    cp.getPrecio(), 
+                    cp.getProducto().getImagen()))
+                .toList() : List.of();
 
-        List<ResenaResponse> resenas = (comercio.getResenas() != null) ?
-            comercio.getResenas().stream()
+        // 3. Mapear Reseñas
+        List<ResenaResponse> resenas = (c.getResenas() != null) ?
+            c.getResenas().stream()
                 .map(r -> new ResenaResponse(
-                        r.getId(),
-                        r.getTitulo(),
-                        r.getComentario(),
-                        r.getValoracion(),
-                        r.getAutorNombre(),
-                        r.getAutorEmail(),
-                        r.getFecha()
-                ))
-                .collect(Collectors.toList()) : List.of();
+                    r.getId(), r.getTitulo(), r.getComentario(), r.getValoracion(), 
+                    r.getAutorNombre(), r.getAutorEmail(), r.getFecha()))
+                .toList() : List.of();
 
         return new ComercioDetailResponse(
-                comercio.getId(),
-                comercio.getNombreComercio(),
-                comercio.getDescripcion(),
-                comercio.getHorario(),
-                comercio.getDiasApertura(),
-                comercio.getLogo(),
-                comercio.getBanner(),
-                comercio.getCategoria() != null ? comercio.getCategoria().getNombreCategoria() : "Sin categoría",
-                puntuacionMedia != null ? puntuacionMedia : 0.0,
-                totalResenas != null ? totalResenas : 0L,
-                productos,
-                resenas
+            c.getId(),
+            c.getNombreComercio(),
+            c.getDescripcion(),
+            c.getHorario(),
+            c.getDiasApertura(),
+            c.getLogo(),
+            c.getBanner(),
+            c.getCategoria() != null ? c.getCategoria().getNombreCategoria() : "Sin categoría",
+            0.0, 
+            0L,  
+            productos,
+            resenas,
+            disps // <--- Ahora se llama 'disps' y coincide con el record
         );
     }
-    
 }
